Refactor git cloning/updating code
The goal was to make this code a bit more straightforward... I'm not
sure that's a complete success :)